# calt

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  _README.md  index.html  index.md  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
_blueprints/: lexer.txt
config/: train.yaml  train_example.yaml
configuration/: index.html
data_loader/: index.html  index.md
dataset_generator/: index.html  index.md
dataset_sagemath/: index.html  index.md
dataset_sympy/: index.html  index.md
docs/: README.md  _quickstart.md  api.md  configuration.md  data_loader.md  dataset_generator.md  dataset_sagemath.md  dataset_sympy.md  io_lexer.md  io_load_preprocessors.md  io_pipeline.md  io_visualization.md  kaggle.md  model_pipeline.md  remote.md  trainer.md
examples/: _run.sh
io_lexer/: index.html  index.md
io_load_preprocessors/: index.html  index.md
io_pipeline/: index.html  index.md
io_visualization/: index.html  index.md
issac2026_experiments/: run_eval.py
model_pipeline/: index.html
notebook/: 01-customdataset-generate-demo.ipynb  02-customdataset-train-demo.ipynb
notebooks/: 01-customdataset-generate-demo.ipynb  01-dataset-generation-tutorial.ipynb  02-customdataset-train-demo.ipynb  comparison_vis.py  demo.ipynb  minimal_demo.ipynb  test_data.json  test_data.pkl  test_final_stats.yaml  test_raw.txt  test_stats.yaml  train_data.json  train_data.pkl  train_final_stats.yaml  train_raw.txt  train_stats.yaml
remote/: index.html  index.md
samples/: test_data.json  test_raw.txt  test_stats.yaml  (+1 more)
(+394 files in other folders)
