[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calt-test"
version = "0.1.0"
description = "A library for computational algebra using Transformers"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Yuta Sato", email = "sato.yuta@gmail.com"}
]

dependencies = [
    "transformers>=4.49.0",
    "omegaconf>=2.3.0",
    "torch>=2.6.0",
    "wandb>=0.15.11",
    "accelerate>=0.29.0",
    "joblib>=1.5.0",
    "sympy>=1.12",
]


[project.urls]
Source        = "https://github.com/HiroshiKERA/calt"
Issues        = "https://github.com/HiroshiKERA/calt/issues"
